--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  padding: 15px;
+}
+
+header #right-side { display: flex; gap: 7px;}
+header #right-side p { font-size: 20px; font-weight: bold; }
+header #right-side img { width: 50px }
+
+header #left-side { display: flex; gap: 15px; }
+header #left-side .icon { cursor: pointer; }
+
+main {
+  background-color: #EEEFF3;
+  padding: 25px 15px;
+  box-sizing: border-box;
+}
+
+main .container {
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
+footer {
+  background-color: #0e1111;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 30px 15px;
+  text-align: center;
 }
